--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,69 @@
       <a href="#">EVENT</a>
     </div>
 
-    <div class="main"></div>
+    <div class="main">
+        <form>
+            <div class="join-type">
+                <table>
+                    <tr>
+                        <th>회원구분</th>
+                        <td>
+                            <label><input type="radio" name="gubun" checked>개인회원</label>
+                            <label><input type="radio" name="gubun">사업자회원</label>
+                        </td>
+                    </tr><!-- table row: 행-->
+                </table>
+            </div>
+            <div class="basic-info">
+                <table>
+                    <tr>
+                        <th>아이디</th>
+                        <td>
+                            <input type="text">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>비밀번호</th>
+                        <td>
+                            <input type="password">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>이름</th>
+                        <td>
+                            <input type="text">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>연락처</th>
+                        <td>
+                            <input type="text">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>SMS 수신여부</th>
+                        <td>
+                            <input type="checkbox">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>이메일</th>
+                        <td>
+                            <input type="email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>파일첨부</th>
+                        <td>
+                            <input type="file">
+                        </td>
+                    </tr>
+                </table>
+                <input type="submit" value="가입">
+                <input type="reset" value="취소">
+            </div>
+        </form>
+    </div>
     <div class="footer">
         <div class="submenu">
             <a href="#">이용약관</a>
