서버 점검 안내

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
                     <tr>
                         <th>SMS 수신여부</th>
                         <td>
-                            <input type="checkbox">
+                            <input type="checkbox">수신함
                         </td>
                     </tr>
                     <tr>
